🐛 fix(homeview.vue): add spacing between header

--- a/src/views/_HomeView.scss
+++ b/src/views/_HomeView.scss
@@ -7,7 +7,7 @@
   }
 
   &__header {
-    @apply pt-4 pb-4 flex items-center justify-between;
+    @apply pt-4 pb-4 flex items-center justify-between mb-10;
   }
 
   &__content {
